--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ button:hover {
   top: 50px;
   border: 1px solid white;
   border-radius: 25px;
-  background-image: url(src/view-night-kharkov-11392733.jpg);
+  background-image: url(../src/background.jpg);
 }
 .header,
 .footer {
