--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,16 @@
 button {
+  margin: 0;
   color: black;
   background-color: #9a5a00;
   font-size: 15px;
   padding: 2px 10px;
   border: 1px solid black;
   border-radius: 5px;
-  transition: all 150ms ease-in-out;
-  cursor: pointer;
 }
 button:hover {
+  cursor: pointer;
   color: aliceblue;
+  transition: all 150ms ease-in-out;
 }
 small {
   position: fixed;
@@ -32,6 +33,7 @@ small {
 .header {
   grid-template-columns: 270px 270px;
 }
+
 .row {
   display: grid;
   grid-template-columns: 77px 184px;
@@ -127,5 +129,12 @@ body,
 #celsium,
 #fahrenheit {
   font-size: 15px;
+  text-decoration: none;
+}
+.footer-right .active {
+  cursor: default;
   color: white;
+}
+.footer-right .active:hover {
+  text-decoration: none;
 }
