--- a/src/style.css
+++ b/src/style.css
@@ -1,30 +1,30 @@
-button {
+#searchButton {
   margin: 0;
-  color: black;
-  background-color: #9a5a00;
+  color: white;
+  background-color: #4d799d;
   font-size: 15px;
   padding: 2px 10px;
-  border: 1px solid black;
+  border: 0.2px solid white;
   border-radius: 5px;
 }
-button:hover {
+#searchButton:active {
   cursor: pointer;
   color: aliceblue;
   transition: all 150ms ease-in-out;
 }
 small {
   position: fixed;
-  left: 60px;
-  top: 411px;
+  left: 268px;
+  top: 415px;
 }
 .wrapper {
   width: 540px;
   position: fixed;
-  left: 50px;
+  left: 120px;
   top: 50px;
   border: 1px solid white;
   border-radius: 25px;
-  background-image: url(../src/background.jpg);
+  background: linear-gradient(to right, #243949 0%, #517fa4 100%);
 }
 .header,
 .footer {
@@ -46,11 +46,11 @@ small {
   line-height: 1.1;
   font-size: 15px;
   padding-inline-start: 45px;
-  margin: 66px 0px 16px 0px;
+  margin: 94px 0px 16px 0px;
 }
 .scale {
   font-size: 68px;
-  margin-block-start: 41px;
+  margin-block-start: 59px;
 }
 .footer {
   grid-template-columns: 90px 90px 90px 90px 90px 90px;
@@ -75,9 +75,10 @@ body,
   font-size: 41px;
 }
 .main1 {
-  font-size: 28px;
+  font-size: 26.5px;
   margin-block-end: 0px;
   margin-block-start: 0px;
+  margin-inline-start: 1px;
 }
 .headerleft {
   margin-block-start: 33px;
@@ -87,7 +88,8 @@ body,
   line-height: 1.4;
 }
 .sunicon1 {
-  margin: 0px 0px 0px 0px;
+  margin: -9px 0px -17px 0px;
+  margin-inline-start: -12px;
 }
 .form {
   margin-block-start: 45px;
@@ -112,7 +114,6 @@ body,
   margin-block-start: 0px;
 }
 .degrees-link {
-  color: white;
   position: fixed;
   margin-block-start: -88px;
   margin-inline-start: 71px;
@@ -137,4 +138,7 @@ body,
 }
 .footer-right .active:hover {
   text-decoration: none;
+}
+#search-form {
+  margin-block-start: 4px;
 }
