--- a/src/style.css
+++ b/src/style.css
@@ -48,11 +48,11 @@ button:hover {
   line-height: 1.1;
   font-size: 15px;
   padding-inline-start: 45px;
-  margin: 94px 0px 16px 0px;
+  margin: 138px 0px 16px 0px;
 }
 .scale {
-  font-size: 68px;
-  margin-block-start: 59px;
+  font-size: 71px;
+  margin-block-start: 104px;
 }
 .footer {
   grid-template-columns: 90px 90px 90px 90px 90px 90px;
@@ -92,6 +92,7 @@ body,
 .sunicon1 {
   margin: -9px 0px -17px 0px;
   margin-inline-start: -12px;
+  position: relative;
 }
 .form {
   margin-block-start: 45px;
